k8s/ouma/Deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ouma
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ouma
  template:
    metadata:
      labels:
        app: ouma
    spec:
      containers:
        - name: ouma
          image: 
          ports:
            - containerPort: 8000
