k8s/ouma/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ouma-service
  namespace: monitoring
spec:
  selector:
    app: ouma
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
